@@ -1298,25 +1298,17 @@ class OutputPage {
 			$ret .= " />\n";
 		}
 		
-		if( $this->isSyndicated() ) {
+		foreach( $this->getSyndicationLinks() as $format => $link ) {
 			# Use the page name for the title (accessed through $wgTitle since
 			# there's no other way).  In principle, this could lead to issues
 			# with having the same name for different feeds corresponding to
 			# the same page, but we can't avoid that at this low a level.
-			global $wgTitle, $wgFeedClasses;
-			
-			if( is_string( $this->getFeedAppendQuery() ) ) {
-				$appendQuery = "&" . $this->getFeedAppendQuery();
-			} else {
-				$appendQuery = "";
-			}
+			global $wgTitle;
 
-			foreach( $wgFeedClasses as $format => $class ) {
-				$ret .= $this->feedLink(
-					$format,
-					$wgRequest->appendQuery( "feed=$format{$appendQuery}" ),
-					wfMsg( "page-{$format}-feed", $wgTitle->getPrefixedText() ) );
-			}
+			$ret .= $this->feedLink(
+				$format,
+				$link,
+				wfMsg( "page-{$format}-feed", $wgTitle->getPrefixedText() ) );
 		}
 
 		# Recent changes feed should appear on every page
@@ -1334,6 +1326,28 @@ class OutputPage {
 			wfMsg( 'site-atom-feed', $wgSitename ) );
 
 		return $ret;
+	}
+	
+	/**
+	 * Return URLs for each supported syndication format for this page.
+	 * @return array associating format keys with URLs
+	 */
+	public function getSyndicationLinks() {
+		global $wgTitle, $wgFeedClasses;
+		$links = array();
+		
+		if( $this->isSyndicated() ) {
+			if( is_string( $this->getFeedAppendQuery() ) ) {
+				$appendQuery = "&" . $this->getFeedAppendQuery();
+			} else {
+				$appendQuery = "";
+			}
+
+			foreach( $wgFeedClasses as $format => $class ) {
+				$links[$format] = $wgTitle->getLocalUrl( "feed=$format{$appendQuery}" );
+			}
+		}
+		return $links;
 	}
 	
 	/**
